--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
-    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
@@ -27,7 +29,7 @@
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.2.1",
+    "daisyui": "^3.5.0",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
