--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
