--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
