--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "firebase": "^10.3.1",
     "jsonwebtoken": "^9.0.1",
+    "multer": "1.4.5-lts.1",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
