--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
+    "test": "jest --watch --coverage",
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js"
   },
@@ -23,6 +24,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.15",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.0",
     "prisma": "^4.8.0"
   },
