--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.3.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "1.4.5-lts.1",
+    "stripe": "^13.6.0",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
