--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "@stripe/stripe-js": "^2.1.6",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
